<resources>
    <string name="app_name">SISPEC</string>
    <string name="sispec">SISPEC</string>
    <string name="nome">Sistema de Gerência de Pecuária de Corte</string>
    <string name="sispec_main_menu">SISPEC - MAIN MENU</string>
    <string name="cadastros">CADASTROS</string>
    <string name="cadastro_de_rebanho">CADASTRO DE REBANHO</string>
    <string name="cadastro_de_insumos">CADASTRO DE INSUMOS</string>
    <string name="relat_rios">RELATÓRIOS</string>
    <string name="sa_de_animal">SAÚDE ANIMAL</string>
    <string name="abates">ABATES</string>
    <string name="compra_e_venda">COMPRA E VENDA</string>
    <string name="mercado">MERCADO</string>
    <string name="info">INFO</string>
    <string name="configurar">CONFIGURAR</string>
    <string name="nfcWrite">Escrever NFC</string>
    <string name="cadastrosPropriedade">CADASTRO DE PROPRIEDADE</string>
    <string name="nomePropriedade">Nome da Propriedade</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="extensaoPropriedade">Extensão da Propriedade (ha)</string>
    <string name="numRegistro">Nº do Registro de saúde</string>
    <string name="cpfcnpjProprietario">CPF ou CNPJ do Proprietário</string>
    <string name="municipioPropriedade">Município</string>
    <string name="localidadePropriedade">Localidade</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastrosRebanho">CADASTRO DE REBANHO</string>
    <string name="EscolhaAPropriedade">Escolha a propriedade que o animal está</string>
    <string name="numeracaoDoBrinco">Nº do Brinco</string>
    <string name="lerChip">Ler Chip</string>
    <string name="title_activity_registrar">RegistrarActivity</string>
    <string name="Registrar">Registrar</string>
    <string name="obsPswdMatch">OBS:A senha e a repetição devem coincidirem.</string>
    <string name="obsMinCharacter">OBS:Login deve conter no mínimo 6 caracteres.</string>
    <string name="pswd">Digite sua senha.</string>
    <string name="pswd2">Digite sua senha novamente.</string>
    <string name="campoLocalidade">Campo LOCALIDADE Obrigatório!</string>
    <string name="campoPropriedade">Campo NOME PROPRIEDADE Obrigatório!</string>
    <string name="nomeProprietario">Nome do Proprietário</string>
    <string name="raca">Raça</string>
    <string name="pelagem">Pelagem</string>
    <string name="tipo">Tipo</string>
    <string name="origemPai">Origem Pai</string>
    <string name="origemMae">Origem Mãe</string>
    <string name="escolhaARaca">Escolha a raça do animal</string>
    <string name="escolhaAPelagem">Escolha a pelagem</string>
    <string name="escolhaOTipo">Escolha o tipo</string>
    <string name="title_activity_cadastro_insumo">CadastroInsumo</string>
    <string name="cadastrosInsumos">Cadastro de Insumos</string>
    <string name="nomeInsumo">Nome do Insumo</string>
    <string name="custoInsumo">Custo do insumo</string>
    <string name="dataCompraInsumo">Data da compra do insumo</string>
    <string name="volumeInsumo">Volume do insumo</string>
    <string name="qtdInsumoComprado">Quantidade comprada</string>


</resources>
