<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde1"
    tools:context="com.example.douglas.myapplication.Telas.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sispec_main_menu"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCadastros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:onClick="callCadastros"
                android:text="@string/cadastros" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/relat_rios" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/sa_de_animal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/abates" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/compra_e_venda" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/mercado" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/info" />

            <Button
                android:layout_width="match_parent"
                android:onClick="callNfc"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/configurar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>