<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde1"
    tools:context="com.example.douglas.myapplication.Telas.CadastroPropriedadeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrosPropriedade"
                android:textAlignment="center"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtNomePropriedade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/nomePropriedade">
            </EditText>

            <EditText
                android:id="@+id/txtExtensaoPropriedade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:inputType="numberDecimal"
                android:hint="@string/extensaoPropriedade">
            </EditText>
            <EditText
                android:id="@+id/txtNomeProprietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/nomeProprietario">
            </EditText>
            <EditText
                android:id="@+id/txtCpfCnpjProprietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:inputType="number"
                android:hint="@string/cpfcnpjProprietario">
            </EditText>

            <EditText
                android:id="@+id/txtMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/municipioPropriedade">
            </EditText>
            <EditText
                android:id="@+id/txtLocalidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/localidadePropriedade">
            </EditText>

            <Button
                android:onClick="cadastraPropriedade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/cadastrar" />
            <TextView
                android:text="@string/campoPropriedade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/campoLocalidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>