<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde1"
    tools:context="com.example.douglas.myapplication.Telas.CadastroInsumoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrosInsumos"
                android:textAlignment="center"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtNomeInsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/nomeInsumo">
            </EditText>
            <EditText
                android:id="@+id/txtVolumeInsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/volumeInsumo">
            </EditText>

            <EditText
                android:id="@+id/txtQtdComprada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/qtdInsumoComprado">
            </EditText>

            <EditText
                android:id="@+id/txtCustoInsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:inputType="numberDecimal"
                android:hint="@string/custoInsumo">
            </EditText>
            <EditText
                android:id="@+id/txtUtilizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="Utilizacao">
            </EditText>
            <EditText
                android:id="@+id/dataCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:inputType="date"
                android:hint="@string/dataCompraInsumo">
            </EditText>
            <Button
                android:onClick="cadastraInsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:text="@string/cadastrar" />
            <TextView
                android:text="@string/campoPropriedade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/campoLocalidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>