<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde1"
    tools:context="com.example.douglas.myapplication.Telas.CadastroRebanhoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrosRebanho"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/EscolhaAPropriedade"
                android:textColor="@color/colorPreto" />

            <Spinner
                android:id="@+id/spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/botao_customizado"
                android:spinnerMode="dropdown"></Spinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/numBrinco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15sp"
                    android:layout_weight="1"
                    android:background="@color/amarelo"
                    android:hint="@string/numeracaoDoBrinco"
                    android:inputType="number"></EditText>

                <Button
                    android:id="@+id/lerChip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/botao_customizado"
                    android:text="@string/lerChip" />

            </LinearLayout>

            <EditText
                android:id="@+id/numRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/numRegistro"
                android:inputType="number"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/escolhaARaca"
                android:textColor="@color/colorPreto" />

            <Spinner
                android:id="@+id/raca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/botao_customizado"
                android:spinnerMode="dropdown"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/escolhaAPelagem"
                android:textColor="@color/colorPreto" />
            <Spinner
                android:id="@+id/pelagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/botao_customizado"
                android:spinnerMode="dropdown"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/escolhaOTipo"
                android:textColor="@color/colorPreto" />
            <Spinner
                android:id="@+id/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:hint="@string/tipo"></Spinner>

            <EditText
                android:id="@+id/origemPai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/origemPai"></EditText>

            <EditText
                android:id="@+id/origemMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@color/amarelo"
                android:hint="@string/origemMae"></EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/botao_customizado"
                android:onClick="callRegistrar"
                android:text="@string/cadastrar" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>